--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -50,9 +50,20 @@
                         <tbody>
                             {% for currentGame in gameData %} {% if currentGame.winner != None %}
                             <tr>
-                                <td><img src="/static/media/{{ currentGame.homeTeam.name }}.png" alt="{{ currentGame.homeTeam.name }}" class="img-fluid" width="50" height="50"></td>
+                                <td>
+                                    <div>
+                                        <img src="/static/media/{{ currentGame.homeTeam.name }}.png" alt="{{ currentGame.homeTeam.name }}" class="img-fluid" width="50" height="50">
+                                    </div>
+                                    <div><small>{{ currentGame.homeRecordWins }} - {{ currentGame.homeRecordLosses }}</small></div>
+                                </td>
+
                                 <td class="text">{{ currentGame.homeScore }} - {{ currentGame.awayScore }}</td>
-                                <td><img src="/static/media/{{ currentGame.awayTeam.name }}.png" alt="{{ currentGame.awayTeam.name }}" class="img-fluid" width="50" height="50"></td>
+                                <td>
+                                    <div>
+                                        <img src="/static/media/{{ currentGame.awayTeam.name }}.png" alt="{{ currentGame.awayTeam.name }}" class="img-fluid" width="50" height="50">
+                                    </div>
+                                    <div><small>{{ currentGame.awayRecordWins }} - {{ currentGame.awayRecordLosses }}</small></div>
+                                </td>
                                 {% if currentGame.pick == None %}
                                 <td>-</td>
                                 {% elif currentGame.pick == currentGame.winner %}
@@ -61,12 +72,22 @@
                                 <td class="text-danger">{{ currentGame.pick.name }}</td>
                             </tr>{% endif %} {% else %}
                             <tr>
-                                <td><img src="/static/media/{{ currentGame.homeTeam.name }}.png" alt="{{ currentGame.homeTeam.name }}" class="img-fluid" width="50" height="50"></td>
+                                <td>
+                                    <div>
+                                        <img src="/static/media/{{ currentGame.homeTeam.name }}.png" alt="{{ currentGame.homeTeam.name }}" class="img-fluid" width="50" height="50">
+                                    </div>
+                                    <div><small>{{ currentGame.homeRecordWins }} - {{ currentGame.homeRecordLosses }}</small></div>
+                                </td>
                                 <td class="text-center align-middle">
                                     <div>{{ currentGame.date }} </div>
                                     <div>{{ currentGame.time }}</div>
                                 </td>
-                                <td><img src="/static/media/{{ currentGame.awayTeam.name }}.png" alt="{{ currentGame.awayTeam.name }}" class="img-fluid" width="50" height="50"></td>
+                                <td>
+                                    <div>
+                                        <img src="/static/media/{{ currentGame.awayTeam.name }}.png" alt="{{ currentGame.awayTeam.name }}" class="img-fluid" width="50" height="50">
+                                    </div>
+                                    <div><small>{{ currentGame.awayRecordWins }} - {{ currentGame.awayRecordLosses }}</small></div>
+                                </td>
                                 {% if currentGame.pick == None %}
                                 <td>-</td>
                                 {% else %}
