--- a/fantasyFootball/templates/fantasyFootball/base.html
+++ b/fantasyFootball/templates/fantasyFootball/base.html
@@ -7,7 +7,7 @@
     <!-- Material Design for Bootstrap -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.16/css/mdb.min.css" rel="stylesheet">
 
-    <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@200&display=swap" rel="stylesheet"> {% load static %}
+    <link href="https://fonts.googleapis.com/css2?family=Exo:wght@300&display=swap" rel="stylesheet">{% load static %}
     <link href="{% static 'css/global.css' %}" rel="stylesheet">
     <link href="{% static 'css/datatables.min.css' %}" rel="stylesheet">
 </head>
