--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -66,7 +66,7 @@
                                 </td>
                                 {% if currentGame.pick == None %}
                                 <td>-</td>
-                                {% elif currentGame.pick == currentGame.winner %}
+                                {% elif currentGame.pick == currentGame.game.winner %}
                                 <td class="text-success">{{ currentGame.pick.name }}</td>
                                 {% else %}
                                 <td class="text-danger">{{ currentGame.pick.name }}</td>
