--- a/picks/templates/picks/picks.html
+++ b/picks/templates/picks/picks.html
@@ -9,30 +9,15 @@
                   Week {{ currentWeek.id }}
                 </button>
                 <div class="dropdown-menu">
-                    <a class="dropdown-item" href="/picks/1/">Week 1</a>
-                    <a class="dropdown-item" href="/picks/2/">Week 2</a>
-                    <a class="dropdown-item" href="/picks/3/">Week 3</a>
-                    <a class="dropdown-item" href="/picks/4/">Week 4</a>
-                    <a class="dropdown-item" href="/picks/5/">Week 5</a>
-                    <a class="dropdown-item" href="/picks/6/">Week 6</a>
-                    <a class="dropdown-item" href="/picks/7/">Week 7</a>
-                    <a class="dropdown-item" href="/picks/8/">Week 8</a>
-                    <a class="dropdown-item" href="/picks/9/">Week 9</a>
-                    <a class="dropdown-item" href="/picks/10/">Week 10</a>
-                    <a class="dropdown-item" href="/picks/11/">Week 11</a>
-                    <a class="dropdown-item" href="/picks/12/">Week 12</a>
-                    <a class="dropdown-item" href="/picks/13/">Week 13</a>
-                    <a class="dropdown-item" href="/picks/14/">Week 14</a>
-                    <a class="dropdown-item" href="/picks/15/">Week 15</a>
-                    <a class="dropdown-item" href="/picks/16/">Week 16</a>
-                    <a class="dropdown-item" href="/picks/17/">Week 17</a>
+                    {% for week in weeks %}
+                    <a class="dropdown-item" href="/picks/{{ week }}/">Week {{ week }}</a> {% endfor %}
                 </div>
             </div>
             <div class="dropdown">
                 <button class="btn btn-sm btn-blue dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ activeLeague }}</button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                     {% for league in userLeagues %}
-                    <a class="dropdown-item" href="/home/1/{{ league.name }}/">{{ league.name }}</a> {% endfor %}
+                    <a class="dropdown-item" href="/picks/1/{{ league.name }}/">{{ league.name }}</a> {% endfor %}
                 </div>
             </div>
         </div>
