Added timezone to user profile and defaulted to US/Pacific. Added methods to retrieve user timezone and display games as their local time. Also fixed logic to check if a game is upcoming.

--- a/fantasyFootball/templates/fantasyFootball/base.html
+++ b/fantasyFootball/templates/fantasyFootball/base.html
@@ -27,12 +27,16 @@
                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">League</a>
                 <div class="dropdown-menu">
                     <a href="/league/home/" class="dropdown-item">League Home</a>
+                    <a href="/league/messageBoard/" class="dropdown-item">Message Board</a>
                     <a href="/league/join/" class="dropdown-item">Join League</a>
                     <a href="/league/create/" class="dropdown-item">Create League</a>
                 </div>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/picks/">Picks</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link disabled" href="#">Bets</a>
             </li>
         </ul>
         <ul class="navbar-nav">
