--- a/fantasyFootball/templates/fantasyFootball/base.html
+++ b/fantasyFootball/templates/fantasyFootball/base.html
@@ -4,8 +4,6 @@
 
     <!-- Bootstrap -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Material Design for Bootstrap -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.16/css/mdb.min.css" rel="stylesheet">
 
     <link href="https://fonts.googleapis.com/css2?family=Exo:wght@300&display=swap" rel="stylesheet">{% load static %}
     <link href="{% static 'css/global.css' %}" rel="stylesheet">
@@ -36,7 +34,7 @@
                 <a class="nav-link" href="/picks/">Picks</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link disabled" href="#">Bets</a>
+                <a class="nav-link" href="/bets/">Bets</a>
             </li>
         </ul>
         <ul class="navbar-nav">
@@ -52,6 +50,9 @@
 </nav>
 <!-- jQuery -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
+<!-- Custom js -->
 <script src="{% static 'js/jquery.cookie.js' %}"></script>
 
 <!-- Popper.js -->
